Fix T53810: Crash removing a scene used in render

Header drawing accesses the scene too.